<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">The Accounting</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>


    <!--GPS-->
    <string name="longitude_label">經度：</string>
    <string name="latitude_label">緯度：</string>
    <string name="address_label">地址：</string>

    <!--Account View-->
    <string name="now">現時金額：</string>
    <string name="new_account_item">新增收支</string>
    <string name="date">日期：</string>
    <string name="amount">金額：</string>
    <string name="ok">確認</string>
    <string name="cancel">取消</string>

    <!--Account Item-->
    <string name="account_item">收支項目</string>
    <string name="time">時間：</string>
    <string name="gps">地點：</string>
    <string name="memo">備註：</string>
    <string name="edit_item_account">編輯項目</string>

    <!--Budget View-->
    <string name="budget">預算</string>
    <string name="new_budget_item">新增預算</string>

    <!--Budget Item-->
    <string name="budget_item">預算項目</string>
    <string name="name">預算名稱：</string>
    <string name="period">結束時間：</string>
    <string name="budget_item_edit">編輯預算</string>
    <string name="budget_item_amount">預算總額:</string>
    <string name="budget_item_used">已使用：</string>

    <!--Budget new-->
    <string name="save_new_budget">儲存</string>
    <string name="back_new_budget">返回</string>

    <!--Tag Edit-->
    <string name="category">分類大項目：</string>
    <string name="tag">分類小標籤：</string>

    <!--Budget Item History-->
    <string name="history">預算項目紀錄</string>
</resources>
